centered delete data modal adjusted pseudo element behind chart fixed bug where background would repeat on load fixed jsx/html conflicts that caused red text in console

--- a/frontend/client/src/App.scss
+++ b/frontend/client/src/App.scss
@@ -58,6 +58,7 @@ html body {
   width: 100vw;
   display: flex;
   justify-content: center;
+  min-height: 100vh;
 }
 
 #off_canvas {
